filter by 'srs-days: ${MAX_NUMBER_OF_DAYS_FOR_SRS:14}'